<resources>
    <string name="app_name">SilverCrest Alarm</string>
    <string name="btnConfirmTitle">Connecting</string>
    <string name="config_instruction">"Plug in your connector.
When the green led stops flashing and lights up continuously, press and hold the button.
When the blue led starts flashing, release the button.
The connector has entered the networking mode."</string>
    <string name="how_to_config"></string>
    <string name="next">NEXT</string>
    <string name="retry">RETRY</string>
    <string name="sure_to_logout">Are you sure you want to log out?</string>
    <string name="loading_press">Loading..</string>
    <string name="dialog_btn_confim">Confirm</string>
    <string name="dialog_btn_cancel">Cancel</string>
    <string name="dialog_title_alert">Alert</string>
    <string name="home_mode">Home</string>
    <string name="out_mode">Away</string>
    <string name="sleep_mode">Sleep</string>
    <string name="switch_lan">Language</string>
    <string name="downing">Downloading…</string>
    <string name="insert_card">Insert card</string>
    <string name="register">Create an account</string>
    <string name="new_version">New</string>
    <string name="app_version_hint">App version</string>
    <string name="gateway_version_hint">Connector version</string>
    <string name="connect_alert">Current connector:</string>
    <string name="connect_equipment_alert">Please choose your connector</string>
    <string name="please_input_complete">Please fill all fields</string>
    <string name="password_length">The password must contain of at least 10 characters</string>
    <string name="password_two_different">The passwords entered do no match</string>
    <string name="name_hint">Email</string>
    <string name="password_hint">Enter your password</string>
    <string name="wifi_password_hint">Enter password WiFi network</string>
    <string name="auto_login">Remember me</string>
    <string name="login">Log in</string>
    <string name="reset_code">Forgot password?</string>
    <string name="choose_language">Choose language </string>
    <string name="switch_language">Language</string>
    <string name="about">About this app</string>
    <string name="please_input_phone">Enter your phone number</string>
    <string name="please_input_email">Enter your email address</string>
    <string name="phone_register">By Phone </string>
    <string name="email_register">By Email </string>
    <string name="phone_find">By Phone</string>
    <string name="email_find">By Email </string>
    <string name="email_sended">Input correct. A verification code is sent to your email address</string>
    <string name="success_register">Registration successful!</string>
    <string name="success_reset">Password successfully reset</string>
    <string name="get_code">Get code</string>
    <string name="phone_hint">Enter your phone number</string>
    <string name="code_hint">Enter verification code</string>
    <string name="modify_password">Change password</string>
    <string name="modifying_newpassword">Changing your password..</string>
    <string name="code_fault">Incorrect password</string>
    <string name="setting_old_password">Enter your old password</string>
    <string name="setting_password_hint">Enter your password</string>
    <string name="setting_confirm_password_hint">Confirm your password</string>
    <string name="setting_new_password_hint">Enter your new password</string>
    <string name="setting_confirm_new_password_hint">Confirm your new password</string>
    <string name="delete_or_unbind_device">Are you sure you want to disconnect connector %1$s(%2$s)?</string>
    <string name="delete_or_not">Are you sure you want to delete this device?</string>
    <string name="ok">OK</string>
    <string name="success">SUCCESSFUL</string>
    <string name="cancel">CANCEL</string>
    <string name="delete_success">Device is successfully deleted</string>
    <string name="device_list">Connector overview</string>
    <string name="device_is_not_at">Device can not be found</string>
    <string name="main">Home</string>
    <string name="scene">Scenes</string>
    <string name="equipment">Devices</string>
    <string name="equipment_warn">Alarm history</string>
    <string name="update_alert">Current version: %1$s, version code: %2$d, find new version:%3$s, new version code:%4$d, do you want to update?</string>
    <string name="exit_hint">Exit %1$s</string>
    <string name="my_home">Home</string>
    <string name="system_scene">Scenes</string>
    <string name="scene_list">Actions</string>
    <string name="choose_color">Scene led color</string>
    <string name="edit">EDIT</string>
    <string name="get_max_scene_group">You get the max size!</string>
    <string name="equipment_list">Device overview</string>
    <string name="add_equipment">Add conditions</string>
    <string name="replace_equipment">Replace</string>
    <string name="delete_equipment">Delete</string>
    <string name="want_to_delete_confirm_eq">Are you sure you want to delete %1$s?</string>
    <string name="want_to_replace_confirm_eq">Are you sure you want to replace %1$s?</string>
    <string name="delete">Delete</string>
    <string name="this_name_has_been_used">This name is already in use</string>
    <string name="operation_success">Successful</string>
    <string name="operation_failed">Failed</string>
    <string name="please_input_name">Enter name</string>
    <string name="one_condition">Action starts when 1 condition occurs</string>
    <string name="all_condition">Action starts when all conditions occur</string>
    <string name="choose_condition">Condition settings</string>
    <string name="one_condition_hint">If you chose more than 1 condition, the action(s) start when one of the conditions occur.</string>
    <string name="all_condition_hint_one">"If you chose more than 1 condition, the action(s) start when all of the conditions occur.</string>
    <string name="all_condition_hint_two"></string>
    <string name="all_condition_hint_three"></string>
    <string name="my_scene">My_Action_</string>
    <string name="name_is_null">Enter name</string>
    <string name="name_is_repeat">Repeat name</string>
    <string name="name_is_too_long">Name is too long</string>
    <string name="name_contain_emoji">Name can not contain emojis</string>
    <string name="name_is_illegal">Name is incorrect</string>
    <string name="output_must_has_eq">Please choose an action</string>
    <string name="intput_must_has_eq">Please choose a condition</string>
    <string name="no_need_to_check">no need to check</string>
    <string name="no_data">No data</string>
    <string name="increase_input">Add conditions</string>
    <string name="increase_output">Add actions</string>
    <string name="condition">Conditions</string>
    <string name="action">Actions</string>
    <string name="scene_has_modify">Save changes?</string>
    <string name="exist_edit_timer_or_not">Exist Edit Timer,Do U Save?</string>
    <string name="hour_and_min">Set time</string>
    <string name="min_and_sec">min/sec </string>
    <string name="week">Choose activation day</string>
    <string name="set_first">Please set first </string>
    <string name="set_weekday">Choose on which days you want to set the timer</string>
    <string name="set_delay">Please set delay time</string>
    <string name="manage">Manage device</string>
    <string name="offline">Offline</string>
    <string name="alarm">Alarm</string>
    <string name="lowvolt_alarm">Low battery warning</string>
    <string name="help">Help</string>
    <string name="normal">Standby</string>
    <string name="silence">Silence</string>
    <string name="test">Test</string>
    <string name="operation">Operation</string>
    <string name="emergency_call">Emergency call</string>
    <string name="call">CALL</string>
    <string name="update_name">Change name</string>
    <string name="door_open">Door opened</string>
    <string name="door_still_open">Door remains opened</string>
    <string name="Illegal_demolition">Illegal demolition</string>
    <string name="has_been_moved">Has been moved</string>
    <string name="has_people">Trigger</string>
    <string name="recent_device">Current connector</string>
    <string name="net_configuration">Configure your connector</string>
    <string name="logout">Log out</string>
    <string name="setting">Settings</string>
    <string name="remember_password">Remember password</string>
    <string name="is_connected_to_wifi">%1$s is connected to WiFi network</string>
    <string name="esptouch_is_configuring">Connector is configuring, please wait...</string>
    <string name="failed">Failed</string>
    <string name="failed_Esptouch_check_eq">Config Failed,Confirm Connector being Configing,or Connector has Problem</string>
    <string name="emergency_number">Emergency number</string>
    <string name="device_setup_record_prerecord">Prerecord</string>
    <string name="device_setup_record_prerecord_prompt">Control to produce linkage recording, advance pre recorded time</string>
    <string name="device_setup_record_length">Record Length</string>
    <string name="device_setup_record_mode">Record Mode</string>
    <string name="device_setup_exposure_time">Time of exposure</string>
    <string name="device_setup_scene_mode">Scene mode</string>
    <string name="device_setup_electronic_slow_shutter">electronic slow shutter</string>
    <string name="device_setup_electronic_slow_shutter_prompt">In low lighting environment, enhance the brightness of the screen. Can cause dynamic image blur</string>
    <string name="device_setup_color_mode">Color mode</string>
    <string name="device_setup_record_audio">Record Audio</string>
    <string name="device_alarm_motion_detection">motion detection</string>
    <string name="device_alarm_motion_detection_tip">The device triggers an alarm event if a moving object is detected</string>
    <string name="device_alarm_func_record">Video interaction</string>
    <string name="device_alarm_func_capture">Camera interaction</string>
    <string name="device_alarm_func_pushmsg">MobilePush linkage</string>
    <string name="device_alarm_func_level">Alarm sensitivity</string>
    <string name="device_alarm_func_record_motion_tip">The device starts recording if the moving object is examined</string>
    <string name="device_alarm_func_capture_motion_tip">The device will grab a picture if it checks the moving object</string>
    <string name="device_alarm_func_pushmsg_motion_tip">When a device triggers an alarm, a message is pushed to the cell phone</string>
    <string name="device_alarm_video_block">Video occlusion</string>
    <string name="wifi_config">Add A New Camera</string>
    <string name="trigger">Trigger</string>
    <string name="is_head_yuyin">Do you hear device prompt \"Wait to be configured\"</string>
    <string name="if_ok_click_next">If it is confirmed, click into the \"next step\"</string>
    <string name="some_device_kuaishan">Some devices are light flashes and no voice prompts</string>
    <string name="no_support_fiveg_wifi">This device does not support WiFi (No supporting WIFI in the 5 GHz band) </string>
    <string name="see_some_scene_above_click">If the above phenomena are observed, click</string>
    <string name="ipc_tip_1">1. please plug in the power supply and data line to ensure that the equipment store is running normally.</string>
    <string name="ipc_tip_2">2. To test the wireless reception of your devices, please make sure that devices are located within one meter distance from each other.</string>
    <string name="ipc_tip_3">3. to hear the voice prompt of \"Wait to be configured\" to start configuration</string>
    <string name="ipc_tip_4">4. if the above phenomenon is not observed, please press the SET/RESRET key and reconnect the equipment to the factory setting.</string>
    <string name="gps_setting">Location settings</string>
</resources>