<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:footerDividersEnabled="true"
        android:listSelector="@drawable/common_list_selector"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <!-- 曝光时间 -->
            <me.hekr.sthome.commonBaseView.SettingIpcItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:accessoryType = "spinner"
                app:Divider="true"
                app:titleText="@string/device_setup_exposure_time"
                android:id="@+id/setupExposureTimeSpinner"/>

            <me.hekr.sthome.commonBaseView.SettingIpcItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:accessoryType = "spinner"
                app:Divider="true"
                app:titleText="@string/device_setup_scene_mode"
                android:id="@+id/setupSceneModeSpinner"/>

            <me.hekr.sthome.commonBaseView.SettingIpcItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:accessoryType = "spinner"
                app:Divider="true"
                app:titleText="@string/device_setup_color_mode"
                android:id="@+id/setupColorModeSpinner"/>

            <me.hekr.sthome.commonBaseView.SettingIpcItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:accessoryType = "spinner"
                app:Divider="true"
                app:titleText="@string/device_setup_electronic_slow_shutter"
                app:subTitleText="@string/device_setup_electronic_slow_shutter_prompt"
                android:id="@+id/setupElectronicSlowShutterSpinner"/>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
